# model-runner

./: .gitattributes  .gitignore  .golangci.yml  .versions  AGENTS.md  Dockerfile  Makefile  README.md  SPECULATIVE_DECODING_IMPL.md  go.mod  go.sum  go.work.sum  main.go
.gemini/: config.yaml  styleguide.md
.github/actions/load-go-version/: action.yml
.github/workflows/: ci.yml  cli-validate.yml  dmr-daily-check.yml  e2e-test.yml  integration-test.yml  promote-to-latest.yml  release.yml
cmd/cli/: .gitignore  Dockerfile  Makefile  go.mod  go.sum
cmd/cli/commands/: compose.go  compose_test.go  configure.go  context.go  context_test.go  gateway.go  gateway_stub.go  inspect.go  install-runner.go  integration_test.go  launch.go  launch_test.go  list.go  list_test.go  logs.go  logs_test.go  package.go  ps.go  pull.go  push.go  reinstall-runner.go  requests.go  restart-runner.go  rm.go  root.go  run.go  run_test.go  show.go  start-runner.go  status.go  status_test.go  tag.go  testmain_test.go  uninstall-runner.go  unload.go  utils.go  utils_test.go
cmd/cli/desktop/: api.go  context.go  desktop.go  desktop_test.go  (+2 more)
cmd/dmr/: main.go
demos/embeddings/: .gitignore  README.md  index.html  indexer.js  package-lock.json  package.json  search.js  server.js
demos/extractor/: package.json
e2e/: api_test.go  cli_test.go  concurrency_test.go  e2e_test.go  inference_test.go
llamacpp/native/: CMakeLists.txt  README.md  cuda.Dockerfile
llamacpp/native/src/server/: server.cpp
model-cli/: Cargo.toml
model-cli/src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  router.rs  types.rs
model-cli/src/providers/: anthropic.rs  mod.rs  openai.rs
pkg/anthropic/: testmain_test.go
pkg/envconfig/: envconfig.go
pkg/inference/: backend.go  testmain_test.go
pkg/logs/: follow.go  http_handler.go  http_handler_test.go  merge.go  merge_test.go
pkg/metrics/: metrics.go  testmain_test.go
pkg/middleware/: alias.go  testmain_test.go
pkg/ollama/: testmain_test.go
pkg/responses/: handler.go  handler_test.go  store.go  store_test.go  testmain_test.go
pkg/sandbox/: testmain_test.go
pkg/tailbuffer/: testmain_test.go
pkg/tls/: testmain_test.go
scripts/: build-vllm-metal-tarball.sh  docker-run.sh
(+369 files in other folders)
